--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -14,6 +14,7 @@
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
 .chat-header {
   height: 100px;
@@ -22,6 +23,31 @@
 .side-bar-header {
   padding: 0 20px;
   height: 100px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+.create-room {
+  font-size: 10px;
+}
+.create-room a{
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+.room {
+  padding: 20px 0 40px;
+}
+.room-name a{
+  text-decoration: none;
+  color: white;
 }
 .messages {
   background-color: #FAFAFA;
